--- a/src/page.css
+++ b/src/page.css
@@ -1,5 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
 
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+/* General Styling */
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +12,6 @@
     text-decoration: none;
     border: none;
     outline: none;
-    font-family: 'Poppins', sans-serif;
 }
 
 :root {
@@ -157,7 +161,7 @@ span {
 
 .home-content h3 {
     margin-bottom: 2rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
     font-size: 3.5rem;
     color: var(--main-color);
     letter-spacing: 0.1rem;
@@ -174,8 +178,8 @@ span {
 }
 
 .home-img img {
-    width: 30vw;
-    height: 30vw;
+    width: 30rem;
+    height: 30rem;
     border-radius: 50%;
     box-shadow: 0 0 25px var(--main-color);
     object-fit: cover;
@@ -222,23 +226,59 @@ span {
 .btn {
     display: inline-block;
     padding: 1rem 2.8rem;
-    background: linear-gradient(135deg, #ff5722, #ff1900);
-    box-shadow: 0 0 25px rgba(255, 25, 0, 0.6);
+    background: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius:4rem;
     font-size: 1.6rem;
-    color: #fff; 
+    color:black; 
     border: 2px solid transparent;
     letter-spacing: 0.1rem;
     font-weight: 600;
-    text-align: center;
     border-radius: 50px; 
-    transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+    transition: 0.3s ease-in-out;
     cursor: pointer;
 }
 
 .btn:hover {
-    background: transparent;
-    color: var(--main-color);
-    border: 2px solid var(--main-color);
-    transform: scale(1.1);
-    box-shadow: 0 0 40px rgba(255, 25, 0, 0.8);
+    transform: scale(1.05);
+    box-shadow: 0 0 50px var(--main-color);
+}
+
+/* Text Animation and Typing Effect */
+.text-animation span {
+    position: relative;
+}
+
+.text-animation span::before {
+    content: "Web Developer";
+    color: white;
+    animation: words 6s infinite;
+}
+
+.text-animation span::after {
+    content: "";
+    position: absolute;
+    right: -8px;
+    width: 3px;
+    background-color: var(--main-color);
+    animation: blink 1s steps(1) infinite;
+    height: 100%;
+}
+
+@keyframes words {
+    0%, 33% {
+        content: "Web Developer";
+    }
+    34%, 66% {
+        content: "Software Tester";
+    }
+    67%, 100% {
+        content: "Coding Enthusiast";
+    }
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
 }
